# EYCleanWaterV1.0

./: README.md  environment.yml  gitHUb_pipeline.txt  howTo.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md
.virtual_documents/notebooks/: 01_improved_benchmark_model.ipynb  02_feature_engineering.ipynb  03_geospatial_features.ipynb  04_full_training_pipeline.ipynb  04_training_and_validation_pipeline.ipynb
business_plan/: roadmap.md
configs/: train_config.yaml
data/raw/: submission_template.csv  training_data.parquet
ey_water_quality_challenge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
notebooks/: 01_improved_benchmark_model.ipynb  02_feature_engineering.ipynb  03_geospatial_features.ipynb  04_training_and_validation_pipeline.ipynb  05_submission_generator.ipynb
notebooks/.ipynb_checkpoints/: 01_improved_benchmark_model-checkpoint.ipynb  02_feature_engineering-checkpoint.ipynb  03_geospatial_features-checkpoint.ipynb  04_full_training_pipeline-checkpoint.ipynb
scripts/: build_training_parquet.py
src/: __init__.py  cli_train.py  data_loading.py  feature_engineering copy.py  feature_engineering.py  geospatial_processing.py  model_training.py  snowflake_integration.py  utils.py
